--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Avrow</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.10/tailwind.min.css"
         integrity="sha512-KO1h5ynYuqsFuEicc7DmOQc+S9m2xiCKYlC3zcZCSEw0RGDsxcMnppRaMZnb0DdzTDPaW22ID/gAGCZ9i+RT/w=="
         crossorigin="anonymous" />
@@ -45,18 +45,17 @@
 </head>
 
 <body>
-    <section class="text-gray-700 body-font bg-blue-900 h-screen">
+    <section class="text-gray-700 body-font bg-gray-700 h-screen">
         <div class="container mx-auto flex px-20 md:flex-row flex-col items-center py-10">
             <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
                 <img class="object-cover object-center rounded" alt="hero" src="./avrow_logo.png">
             </div>
             <div
                 class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Avrow - a simple, type safe
-                    implementation
+                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Avrow is a pure
+                    <span><a href="https://www.rust-lang.org/" class="text-orange-400">Rust</a></span> implementation
                     of the <span><a class="text-teal-600" href="http://avro.apache.org/docs/current/spec.html">avro
-                            specification</a></span>
-                    in <span><a href="https://www.rust-lang.org/" class="text-orange-400">Rust</a></span>.
+                            specification</a></span> with <span><a class="text-teal-600" href="https://serde.rs/">Serde</a></span> support.
                 </h1>
 
                 <div class="flex justify-center">
